# BigNumbers

./: CMakeLists.txt  README.md  bignumbers.h  main.cpp  tests.cpp
tests/: TestBigInteger.cpp  TestBigRational.cpp
